# model/dto/req/register_request.go
@@ -1,10 +1,10 @@
 package req
 
 type AuthRegisterRequest struct {
-	FullName        string `validate:"required,min=3,max=50"`
-	Email           string `validate:"required,email"`
-	PhoneNumber     string `validate:"required,min=10,max=15"`
-	UserName        string `validate:"required,min=3,max=30"`
-	Password        string `validate:"required"`
-	PasswordConfirm string `validate:"required,eqfield=Password"`
+	FullName        string `json:"fullName" validate:"required,min=3,max=50"`
+	Email           string `json:"email" validate:"required,email"`
+	PhoneNumber     string `json:"phoneNumber" validate:"required,min=10,max=15"`
+	UserName        string `json:"userName" validate:"required,min=3,max=30"`
+	Password        string `json:"password" validate:"required"`
+	PasswordConfirm string `json:"passwordConfirm" validate:"required,eqfield=Password"`
 }
